[chromium] Assertion failures during compositor startup in lost context situations https://bugs.webkit.org/show_bug.cgi?id=87912

Reviewed by Adrienne Walker.

Source/WebCore:

getShaderiv and getProgramiv may return 0 if the context is lost. We correctly recover in this case, so it's
bogus to fail an ASSERT in debug in this case.

Added new unit test in LayerRendererChromiumTest to cover this.

* platform/graphics/chromium/ProgramBinding.cpp:
(WebCore::contextLost):
(WebCore):
(WebCore::ProgramBindingBase::init):
(WebCore::ProgramBindingBase::createShaderProgram):

Source/WebKit/chromium:

Adds a unit test verifying that even if we lose our context during or before initialization we get through the
rest of the path without failing ASSERT()s.

* tests/LayerRendererChromiumTest.cpp:
(LoseContextOnFirstGetContext):
(LoseContextOnFirstGetContext::LoseContextOnFirstGetContext):
(TEST):

Canonical link: https://commits.webkit.org/105849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119160 268f45cc-cd09-0410-ab3c-d52691b4dbfc